# marketing-analytics-boilerplate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.agents/skills/marketing-analytics/: cluster-audit.md  daily-routine.md  dashboard-sync.md  geo-debug.md  notion-schema.md  page-drafts.md  seo-principles.md
.claude/skills/marketing-analytics/: SKILL.md  cluster-manage.md  knowledge-refresh.md  peec-ingest.md  source-gap-refresh.md  visibility-lift.md  weekly-routine.md
config/: notion_schema.yaml  topic_clusters.yaml
dashboard/: next.config.mjs  package.json  start.sh  tailwind.config.ts  tsconfig.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AutoRefresh.tsx  Breadcrumbs.tsx  (+58 more)
data/dashboard/: cluster_overrides.json  custom_clusters.json  geo_debug.json  insights.json  pillar_pages.json  prompt_issue_dismissals.json  refresh_state.json  scrape_state.json  source_gaps.json  tasks.json
docs/: google-credentials-setup.md  how-the-workflow-learns.md  notion-setup.md
docs/scheduled-agents/: README.md  daily-prompt.md  env-template.md  knowledge-refresh-prompt.md  weekly-prompt.md
scripts/: aggregate_daily.py  aggregate_weekly.py  assign_clusters.py  backfill_peec_30d.py  compute_readiness_extras.py  compute_visibility_improvements.py  fetch_peec_resources.py  parse_llm_traffic.py  pull_ga4.py  pull_gsc.py  refresh_llm_list.py  scrape_site.py
scripts/utils/: __init__.py  dates.py  logging.py  urls.py
tests/: conftest.py  test_dates.py
tests/fixtures/: ga4_sample.json  llm_referrer_list.json
(+42 files in other folders)
